<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#77ffffff"
    android:elevation="10dp"
    android:orientation="horizontal"
    android:translationZ="10dp"
    android:weightSum="5"
    tools:targetApi="lollipop">

    <ImageButton
        android:id="@+id/toolbar_onBottom_imgBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/contentDesciption_News"
        android:src="@drawable/toolbar_onbottom_home_icon" />

    <ImageButton
        android:id="@+id/toolbar_onBottom_imgBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/contentDesciption_Gall"
        android:src="@drawable/toolbar_onbottom_gallery_icon" />

    <ImageButton
        android:id="@+id/toolbar_onBottom_imgBtn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/contentDesciption_Sear"
        android:src="@drawable/toolbar_onbottom_search_icon" />

    <ImageButton
        android:id="@+id/toolbar_onBottom_imgBtn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/contentDesciption_Nofi"
        android:src="@drawable/toolbar_onbottom_notification_icon" />

    <ImageButton
        android:id="@+id/toolbar_onBottom_imgBtn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/contentDesciption_Prof"
        android:src="@drawable/toolbar_onbottom_profile_icon" />
</LinearLayout>