<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/clRed"
        android:elevation="10dp"
        android:minHeight="?attr/actionBarSize"
        tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imgBtnHome"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/HOME_BUTTON"
                android:src="@mipmap/foody_logo"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:gravity="center">

                <Button
                    style="?android:attr/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttonleft_menu_style"
                    android:minHeight="32dp"
                    android:minWidth="64dp"
                    android:text="@string/FOODY_MENU_PLAES_VI"
                    android:textColor="@drawable/buttonleft_menu_style" />

                <Button
                    style="?android:attr/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttonright_menu_style"
                    android:minHeight="32dp"
                    android:minWidth="64dp"
                    android:text="@string/FOODY_MENU_FOOD_VI"
                    android:textColor="@drawable/buttonright_menu_style" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/imgBtnPlus"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/MENU_MORE"
                android:src="@drawable/ic_add_empty_24dp" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>
</LinearLayout>